# src/modules/auth/auth.routes.ts
@@ -10,3 +10,5 @@ authRouter.post("/login", asyncHandler(authController.login));
 authRouter.post("/refresh", asyncHandler(authController.refresh));
 authRouter.post("/role", requireAuth, asyncHandler(authController.switchRole));
 authRouter.post("/logout", requireAuth, asyncHandler(authController.logout));
+authRouter.post("/send-verification-code", requireAuth, asyncHandler(authController.sendVerificationCode));
+authRouter.post("/verify-email", requireAuth, asyncHandler(authController.verifyEmail));
